<resources>
    <string name="app_name">Discussed</string>
    <string name="facebook_app_id">4053114731391451</string>
    <string name="fb_login_protocol_scheme">fb4053114731391451</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_my_profile">My Profile</string>
    <string name="action_show_alien_profile">Stranger Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_alien_profile">Profile of Stranger</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_blindDate">Blind Date</string>
    <string name="title_top">Main fragment</string>
    <string name="title_activity_location">Map</string>
    <string-array name="titles">
        <item>Home Page</item>
        <item>Blind Dates</item>
        <item>Conversations</item>
        <item>Settings</item>
        <item>About</item>
        <item>Log out</item>
    </string-array>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="change_image_button"><b>Change image</b></string>
    <string name="profile_title"><b>WELCOME TO YOUR PROFILE!</b></string>
    <string name="change_your_description_button"><b>Change description</b></string>
    <string name="change_your_location_button"><b>Change Location</b></string>
    <string name="description_dialog_hint">Describe Yourself (Between 50 and 500 letters)</string>
    <string name="change_your_age_button"><b>Change Age</b></string>
    <string name="dialog_box_upload_photo">Uploading photo…</string>
    <string name="change_your_gender_button"><b>Change Gender</b></string>
    <string name="change_name_button"><b>Change name</b></string>
    <string name="date_alert_text">You can\'t change this, right now! \n Nr of days left: </string>
    <string name="not_filled">UNFILLED</string>
    <string name="gender_male_profile_activity">Male</string>
    <string name="gender_female_profile_activity">Female</string>
    <string name="change_your_topics_button"><b>Pick up topics</b></string>
    <string name="alert_dialog_loading_profile">Loading profile…</string>
    <string name="upload_finished_photo_profile_activity">Upload finished!</string>
    <string name="upload_failed_profile_activity">Upload failed.</string>
    <string name="upload_progress_1_profile_activity">Uploaded&#160;</string>
    <string name="upload_progress_2_profile_activity">%</string>
    <string name="choose_gender_box_profile_activity">Chose Your gender</string>
    <string name="pickup_topics_title_profile_activity">Pick Your Topics (from 2 to 5)</string>
    <string name="topics_warning_max_profile_activity">Maximum 5 topics!!!</string>
    <string name="more_topics_info_1_profile_activity">Please choose&#160;</string>
    <string name="more_topics_info_2_profile_activity">&#160;more topic!</string>
    <string name="your_name_text_profile_activity">Your Name</string>
    <string name="your_age_text_profile_activity">Your Age</string>
    <string name="your_description_text_profile_activity">Your Description</string>
    <string name="your_topics_text_profile_activity">Your topics: \n\n</string>
    <string name="welcome_text_1_profile_activity">Welcome&#160;</string>
    <string name="welcome_text_2_profile_activity">to Your profile!</string>
    <string name="chose_age_title_profile_activity">Enter Your age (Between 18 and 115)</string>
    <string name="chose_name_title_profile_activity">Enter Your name (Between 3 and 35 letters)</string>
    <string name="wrong_age_info_profile_activity">Set age from 18 to 115 years old!</string>
    <string name="wrong_input_info_profile_activity">You need to type more!!!</string>
    <string name="alien_profile_title">PROFILE OF STRANGER</string>
    <string name="uncover_alien_description"><b>Uncover description</b></string>
    <string name="uncover_image_button"><b>Uncover photo</b></string>
    <string name="uncover_alien_location"><b>Uncover location</b></string>
    <string name="uncover_alien_age"><b>Uncover\n age</b></string>
    <string name="points_left_to_use_alien">Nr of points left to use:</string>
    <string name="alien_hint_before_uncover">\???????</string>
    <string name="title_text_1_alien_profile_activity">Welcome to&#160;</string>
    <string name="title_text_2_alien_profile_activity">\'s profile!</string>
    <string name="favorite_topics_text_alien_profile_activity">Favorite topics: \n\n</string>
    <string name="spend_points_text_1_dialog_alien_profile_activity">Do You want to spend&#160;</string>
    <string name="spend_points_text_2_description_dialog_alien_profile_activity">&#160;points to uncover description?</string>
    <string name="spend_points_text_2_age_dialog_alien_profile_activity">&#160;points to uncover age?</string>
    <string name="spend_points_text_2_location_dialog_alien_profile_activity">&#160;points to uncover location?</string>
    <string name="spend_points_text_2_photo_dialog_alien_profile_activity">&#160;points to uncover this photo?</string>
    <string name="nr_of_points_text_alien_profile_activity">Nr of points left to use:&#160;&#160;</string>
    <string name="info_not_enough_points_to_uncover_alien_profile_activity">You don\'t have enough points to uncover what You want. \n Try harder!</string>
    <string name="search_chatMate_button">Search Chat Mate</string>
    <string name="start_blind_date_button">Start Blind Date</string>
    <string name="text_search_availability_box">You have not fully filled the profile card. You still need to add: \n\n </string>
    <string name="location_radius_fragment_main">Location Radius:</string>
    <string name="radius_5km_fragment_main">5km</string>
    <string name="radius_10km_fragment_main">10km</string>
    <string name="radius_25km_fragment_main">25km</string>
    <string name="radius_100km_fragment_main">100km</string>
    <string name="radius_150km_fragment_main">150km</string>
    <string name="radius_250km_fragment_main">250km</string>
    <string name="radius_country_fragment_main">Country</string>
    <string name="radius_world_fragment_main">World</string>
    <string name="age_criteria_fragment_main">Age:</string>
    <string name="gender_criteria_fragment_main">Gender:</string>
    <string name="search_criteria_main_fragment">SEARCH CRITERIA</string>
    <string name="next_dialog_boxes">NEXT</string>
    <string name="title_not_filled_profile_to_search_alert_dialog">You have not fully filled the profile card. You still need to add: \n\n</string>
    <string name="title_not_enough_sapce_for_chats_alert_dialog">You have reached maximum nr of ongoing chats, delete at least one of them (long hold on chat in conversation tab)
                to unlock search option for new chat.</string>
    <string name="logout_text">Logout</string>
    <string name="donate_text">Donate Me!</string>
    <string name="appreciate_me_text">Good Job!</string>
    <string name="title_settings"><B>Settings</B></string>
    <string name="delete_account">Delete My account</string>
    <string name="good_job_text_view_settings_tab">If You want to say \"Thank You!\" just click the button on the right and I will be happy just for that! ;)</string>
    <string name="deleteAccount_textview_settings_tab">Do You want to delete Your account (all photos, description, name, location, etc.)?</string>
    <string name="logout_textview_settings_tab">Do you want to logout from current account?</string>
    <string name="donate_textview_settings_tab">If simple \"Thank You!\" is not enough, You can send me some money! You will receive PREMIUM account in return!
                What PREMIUM gives to You? Check "About" tab.</string>
    <string name="participation_in_blind_date_switch">Do You want to participate in blind dates?</string>
    <string name="agreeTermsCheckBox">I Agree to <b><u>Terms and Conditions</u></b> of using app "Discussed"</string>
    <string name="agreeAgeCheckBox">I\'m over 18 years old.</string>
    <string name="terms_and_conditions_text_title">\nTERMS AND CONDITIONS\n</string>
    <string name="facebook_button_text"><![CDATA[\t\t\t\t\tSign in]]></string>
    <string name="content_description_main_logo_login_activity">Main Logo</string>
</resources>