<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/loginLayoutFull"
    android:layout_height="match_parent"
    tools:context=".Controllers.LoginActivity">

    <LinearLayout
        android:id="@+id/linear_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/appNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/oswald_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textSize="65sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linear_login_title">

        <ImageView
            android:id="@+id/logo_login_View"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_main_logo_login_activity"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/main_logo_icon_transparent2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_buttons_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_logo_login">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in_google"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="45dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_sign_in_facebook"
            android:layout_width="match_parent"
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_login_text="@string/facebook_button_text"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="4dp"
            android:layout_height="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_terms_box_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_buttons_login">

        <CheckBox
            android:id="@+id/checkAgreeTerms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textColor="@color/grey"
            android:theme="@style/MainCheckBox" />

        <TextView
            android:id="@+id/textOfTerms"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:layout_marginEnd="10dp"
            android:text="@string/agreeTermsCheckBox"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/teal_green_700"
            android:textSize="11sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_age_box_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_terms_box_login">

        <CheckBox
            android:id="@+id/checkAgreeAge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:checked="false"
            android:textColor="@color/grey"
            android:theme="@style/MainCheckBox" />

        <TextView
            android:id="@+id/textOfAge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/agreeAgeCheckBox"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/teal_green_700"
            android:textSize="11sp"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>