<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scrollViewProfile"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_Constraint_Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:context="pl.makorz.discussed.Controllers.ProfileActivity">

        <LinearLayout
            android:id="@+id/linear_space_top"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/brown_500"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/linear_alien_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_space_top"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/title_alien_profile_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/profile_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_space_to_images_alien"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/brown_500"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_alien_title" />

        <LinearLayout
            android:id="@+id/linear_alien_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_space_to_images_alien">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_first_image_alien_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/default_view_profile_background"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_second_image_alien_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/default_view_profile_background"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_third_image_alien_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/default_view_profile_background"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_alien_photos_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_alien_photos">

            <Button
                android:id="@+id/first_image_change"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/change_image_button" />

            <Button
                android:id="@+id/second_image_change"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/change_image_button" />

            <Button
                android:id="@+id/third_image_change"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/change_image_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_alien_space_to_personal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/brown_500"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_alien_photos_buttons" />

        <LinearLayout
            android:id="@+id/linear_blindDateParticipation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_alien_space_to_personal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_blindDate_participation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/participation_in_blind_date_switch"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_alien_space_to_personal2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/brown_500"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_blindDateParticipation" />

        <LinearLayout
            android:id="@+id/linear_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_alien_space_to_personal2">

            <TextView
                android:id="@+id/name_my_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/style_text_view_profile"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <Button
                android:id="@+id/name_own_change"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/change_name_button"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_alien_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_name">

            <TextView
                android:id="@+id/own_description_my_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/style_text_view_profile"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <Button
                android:id="@+id/description_own_change"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/change_your_description_button"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_alien_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_alien_description">

            <TextView
                android:id="@+id/own_location_my_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/style_text_view_profile"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <Button
                android:id="@+id/location_own_change"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/change_your_location_button"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_alien_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_alien_location">

            <TextView
                android:id="@+id/own_age_my_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10"
                android:background="@drawable/style_text_view_profile"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <Button
                android:id="@+id/age_own_change"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/change_your_age_button"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_alien_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_alien_age">

            <TextView
                android:id="@+id/own_gender_my_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10"
                android:background="@drawable/style_text_view_profile"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <Button
                android:id="@+id/gender_own_change"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/change_your_gender_button"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_alien_topics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_alien_gender">

            <TextView
                android:id="@+id/topics_my_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10"
                android:background="@drawable/style_text_view_profile"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <Button
                android:id="@+id/topics_own_change"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:text="@string/change_your_topics_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_space_bottom"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/brown_500"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_alien_topics"/>

        <LinearLayout
            android:id="@+id/linear_space_for_scrollview"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_space_bottom"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>